shop check route verify route and other stuff
