# swagger.yaml
@@ -294,7 +294,7 @@ components:
         - min_cart_value
         - max_no_times
         - max_no_of_times_per_user
-        - is_active 
+        - is_active
         - shop_id
         - added_on
         - categories
@@ -320,7 +320,7 @@ components:
         max_no_of_times_per_user:
           type: integer
         is_active:
-          type: boolean 
+          type: boolean
         categories:
           type: array
           items:
@@ -334,11 +334,9 @@ components:
           items:
             type: string
         shop_id:
-          type:
-            string
+          type: string
         added_on:
-          type:
-            string
+          type: string
 
 paths:
   # AUTH ROUTES
@@ -452,7 +450,7 @@ paths:
     post:
       tags:
         - Shop
-      summary: Adds shop (admin)
+      summary: Add shop (admin)
       parameters:
         - in: header
           name: token
@@ -466,61 +464,61 @@ paths:
             schema:
               type: object
               required:
-                  - image
-                  - banner
-                  - number
-                  - fssai
-                  - admin_commission_rate
-                  - store_name
-                  - email
-                  - address_line1
-                  - city
-                  - state
-                  - delivery_charges
+                - image
+                - banner
+                - number
+                - fssai
+                - admin_commission_rate
+                - store_name
+                - email
+                - address_line1
+                - city
+                - state
+                - delivery_charges
               properties:
-                  image:
-                    type: string
-                    example: "adscsvf"
+                image:
+                  type: string
+                  example: "adscsvf"
 
-                  banner:
-                    type: string
-                    example: "adcascdsd"
+                banner:
+                  type: string
+                  example: "adcascdsd"
 
-                  number:
-                    type: integer
-                    example: 1234567890
+                number:
+                  type: integer
+                  example: 1234567890
 
-                  fssai:
-                    type: string
-                    example: "adcadc"
+                fssai:
+                  type: string
+                  example: "adcadc"
 
-                  admin_commission_rate:
-                    type: integer
-                    example: 4
+                admin_commission_rate:
+                  type: integer
+                  example: 4
 
-                  store_name:
-                    type: number
-                    example: macd
+                store_name:
+                  type: number
+                  example: macd
 
-                  email:
-                    type: string
-                    example: asxnakc@csd.com
+                email:
+                  type: string
+                  example: asxnakc@csd.com
 
-                  address_line1:
-                    type: string
-                    example: "acxacdadc"
+                address_line1:
+                  type: string
+                  example: "acxacdadc"
 
-                  city:
-                    type: string
-                    example: "mumbai"
+                city:
+                  type: string
+                  example: "mumbai"
 
-                  state:
-                    type: string
-                    example: "maharashtra"
+                state:
+                  type: string
+                  example: "maharashtra"
 
-                  delivery_charges:
-                    type: number
-                    example: 500
+                delivery_charges:
+                  type: number
+                  example: 500
       responses:
         200:
           description: Sucess
@@ -553,61 +551,61 @@ paths:
             schema:
               type: object
               required:
-                  - image
-                  - banner
-                  - number
-                  - fssai
-                  - admin_commission_rate
-                  - store_name
-                  - email
-                  - address_line1
-                  - city
-                  - state
-                  - delivery_charges
+                - image
+                - banner
+                - number
+                - fssai
+                - admin_commission_rate
+                - store_name
+                - email
+                - address_line1
+                - city
+                - state
+                - delivery_charges
               properties:
-                  image:
-                    type: string
-                    example: "adscsvf"
+                image:
+                  type: string
+                  example: "adscsvf"
 
-                  banner:
-                    type: string
-                    example: "adcascdsd"
+                banner:
+                  type: string
+                  example: "adcascdsd"
 
-                  number:
-                    type: integer
-                    example: 1234567890
+                number:
+                  type: integer
+                  example: 1234567890
 
-                  fssai:
-                    type: string
-                    example: "adcadc"
+                fssai:
+                  type: string
+                  example: "adcadc"
 
-                  admin_commission_rate:
-                    type: integer
-                    example: 4
+                admin_commission_rate:
+                  type: integer
+                  example: 4
 
-                  store_name:
-                    type: number
-                    example: macd
+                store_name:
+                  type: number
+                  example: macd
 
-                  email:
-                    type: string
-                    example: asxnakc@csd.com
+                email:
+                  type: string
+                  example: asxnakc@csd.com
 
-                  address_line1:
-                    type: string
-                    example: "acxacdadc"
+                address_line1:
+                  type: string
+                  example: "acxacdadc"
 
-                  city:
-                    type: string
-                    example: "mumbai"
+                city:
+                  type: string
+                  example: "mumbai"
 
-                  state:
-                    type: string
-                    example: "maharashtra"
+                state:
+                  type: string
+                  example: "maharashtra"
 
-                  delivery_charges:
-                    type: number
-                    example: 500
+                delivery_charges:
+                  type: number
+                  example: 500
       responses:
         200:
           description: Sucess
@@ -640,9 +638,9 @@ paths:
             schema:
               type: object
               properties:
-                  number:
-                    type: integer
-                    example: 1234567890
+                number:
+                  type: integer
+                  example: 1234567890
       responses:
         200:
           description: Sucess
@@ -1058,7 +1056,7 @@ paths:
               properties:
                 name:
                   type: string
-                
+
       responses:
         200:
           description: Sucess
@@ -1253,7 +1251,7 @@ paths:
                 delivery_address_id:
                   type: string
                 coupon_code_id:
-                  type: string  
+                  type: string
       responses:
         200:
           description: Sucess
@@ -1703,7 +1701,7 @@ paths:
           name: token
           schema:
             type: string
-          required: true    
+          required: true
       responses:
         200:
           description: Fetched sucessfully
@@ -1986,9 +1984,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
-
   # COUPON ROUTES
-
 
   /coupon/add_coupon:
     post:
@@ -2018,7 +2014,7 @@ paths:
                 - min_cart_value
                 - max_no_times
                 - max_no_of_times_per_user
-                - is_active 
+                - is_active
                 - categories
                 - products
                 - restaurants
@@ -2044,7 +2040,7 @@ paths:
                 max_no_of_times_per_user:
                   type: integer
                 is_active:
-                  type: boolean 
+                  type: boolean
                 categories:
                   type: array
                   items:
@@ -2105,7 +2101,7 @@ paths:
                 - min_cart_value
                 - max_no_times
                 - max_no_of_times_per_user
-                - is_active 
+                - is_active
                 - shop_id
                 - categories
                 - products
@@ -2132,7 +2128,7 @@ paths:
                 max_no_of_times_per_user:
                   type: integer
                 is_active:
-                  type: boolean 
+                  type: boolean
                 categories:
                   type: array
                   items:
@@ -2146,8 +2142,7 @@ paths:
                   items:
                     type: string
                 shop_id:
-                  type:
-                    string
+                  type: string
       responses:
         200:
           description: Sucess
@@ -2248,10 +2243,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
-
-
   # PAYMENT ROUTES
-
 
   /payment/init_payment:
     get:
